--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -8,33 +8,51 @@ spring:
 spring:
   profiles: local
   application:
-    name: discovery-service
+    name: discovery
 server:
   port: 8761
 eureka:
   instance:
+    instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    leaseRenewalIntervalInSeconds: 30
+    leaseExpirationDurationInSeconds: 90
     preferIpAddress: true 
+  client:
+    healthcheck:
+      enabled: true
 
 # 개발 환경
 ---
 spring:
   profiles: dev
   application:
-    name: discovery-service
+    name: discovery
 server:
   port: 8761
 eureka:
   instance:
+    instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    leaseRenewalIntervalInSeconds: 30
+    leaseExpirationDurationInSeconds: 90
     preferIpAddress: true 
+  client:
+    healthcheck:
+      enabled: true
 
 # 운영 환경
 ---
 spring:
   profiles: ops
   application:
-    name: discovery-service
+    name: discovery
 server:
   port: 8761 
 eureka:
   instance:
+    instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    leaseRenewalIntervalInSeconds: 30
+    leaseExpirationDurationInSeconds: 90
     preferIpAddress: true 
+  client:
+    healthcheck:
+      enabled: true
