--- a/news-service/pom.xml
+++ b/news-service/pom.xml
@@ -4,11 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>gateway-service</artifactId>
+	<artifactId>news-service</artifactId>
 	<packaging>jar</packaging>
 
-	<name>gateway-service</name>
-	<description>Zuul template</description>
+	<name>news-service</name>
+	<description>news-service</description>
 
 	<parent>
 		<groupId>com.news</groupId>
@@ -22,10 +22,6 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-<!-- 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
