--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<modules>
 		<module>discovery-service</module>
 		<module>gateway-service</module>
+		<module>article-service</module>
 	</modules>
 
 	<packaging>pom</packaging>
