어플리케이션 서비스명 변경

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>auth-service</artifactId>
 	<packaging>jar</packaging>
 
-	<name>auth-service</name>
+	<name>auth</name>
 	<description>auth service</description>
 
 	<parent>
