--- a/discovery-service/.gitignore
+++ b/discovery-service/.gitignore
@@ -23,3 +23,15 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+/.project
+/.classpath
+/target/
+/.project
+/.classpath
+/.mvn/
+/.project
+/.classpath
+/.settings/
+/mvnw
+/mvnw.cmd
+/.springBeans
