--- a/gateway-service/.gitignore
+++ b/gateway-service/.gitignore
@@ -1,2 +1,14 @@
 /target/
 /.springBeans
+/.project
+/.classpath
+/target/
+/.project
+/.classpath
+/.mvn/
+/.project
+/.classpath
+/.settings/
+/mvnw
+/mvnw.cmd
+/.springBeans
