--- a/article-service/pom.xml
+++ b/article-service/pom.xml
@@ -14,7 +14,7 @@
 		<groupId>com.news</groupId>
 		<artifactId>news</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 
 	<dependencies>
