--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -7,14 +7,14 @@
 	<artifactId>user-service</artifactId>
 	<packaging>jar</packaging>
 
-	<name>user</name>
+	<name>user-service</name>
 	<description>user service</description>
 
 	<parent>
 		<groupId>com.news</groupId>
 		<artifactId>news</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath />
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<properties>
