--- a/article-service/pom.xml
+++ b/article-service/pom.xml
@@ -4,11 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>news-service</artifactId>
+	<artifactId>article-service</artifactId>
 	<packaging>jar</packaging>
 
-	<name>news-service</name>
-	<description>news-service</description>
+	<name>article-service</name>
+	<description>article-service</description>
 
 	<parent>
 		<groupId>com.news</groupId>
