--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -4,10 +4,10 @@
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>user-service</artifactId>
+	<artifactId>user</artifactId>
 	<packaging>jar</packaging>
 
-	<name>user-service</name>
+	<name>user</name>
 	<description>user service</description>
 
 	<parent>
