--- a/article-service/pom.xml
+++ b/article-service/pom.xml
@@ -72,7 +72,12 @@
 			<artifactId>restapi-lib</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
+		
+		<!-- about jpa -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
