--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -9,8 +9,17 @@ spring:
   profiles: local
   application:
     name: auth-service
+  datasource:
+    hikari:
+      driver-class-name: org.h2.Driver
+      jdbc-url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+      username: root
+      password: 1234
+  h2:
+    console:
+      enabled: true
 server:
-  port: 6000
+  port: 6050
 eureka:
   instance:
     preferIpAddress: true 
@@ -22,7 +31,7 @@ spring:
   application:
     name: auth-service
 server:
-  port: 6000
+  port: 6050
 eureka:
   instance:
     preferIpAddress: true 
@@ -34,7 +43,7 @@ spring:
   application:
     name: auth-service
 server:
-  port: 6000 
+  port: 6050 
 eureka:
   instance:
     preferIpAddress: true 
