[WIP] 기사관련 API 개발 작업 (initial commit) - 기사 등록, 조회 기능 - typo fix - Annotation revision to reduce warnings - etc.

--- a/article-service/pom.xml
+++ b/article-service/pom.xml
@@ -82,6 +82,12 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.news</groupId>
+			<artifactId>news-lib</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
